--- a/src/sass/base/_font-face.scss
+++ b/src/sass/base/_font-face.scss
@@ -18,7 +18,7 @@
 // 900 - Black
 
 @font-face {
-  font-family: 'Inter';
+  font-family: Inter;
   font-weight: 100;
   font-display: swap;
   src: local('Inter'), local('Inter Thin'),
@@ -26,7 +26,7 @@
 }
 
 @font-face {
-  font-family: 'Inter';
+  font-family: Inter;
   font-weight: 200;
   font-display: swap;
   src: local('Inter'), local('Inter ExtraLight'),
@@ -34,7 +34,7 @@
 }
 
 @font-face {
-  font-family: 'Inter';
+  font-family: Inter;
   font-weight: 300;
   font-display: swap;
   src: local('Inter'), local('Inter Light'),
@@ -42,7 +42,7 @@
 }
 
 @font-face {
-  font-family: 'Inter';
+  font-family: Inter;
   font-weight: 400;
   font-display: swap;
   src: local('Inter'), local('Inter Regular'),
@@ -50,7 +50,7 @@
 }
 
 @font-face {
-  font-family: 'Inter';
+  font-family: Inter;
   font-weight: 500;
   font-display: swap;
   src: local('Inter'), local('Inter Medium'),
@@ -58,7 +58,7 @@
 }
 
 @font-face {
-  font-family: 'Inter';
+  font-family: Inter;
   font-weight: 600;
   font-display: swap;
   src: local('Inter'), local('Inter SemiBold'),
@@ -66,7 +66,7 @@
 }
 
 @font-face {
-  font-family: 'Inter';
+  font-family: Inter;
   font-weight: 700;
   font-display: swap;
   src: local('Inter'), local('Inter Bold'),
@@ -74,7 +74,7 @@
 }
 
 @font-face {
-  font-family: 'Inter';
+  font-family: Inter;
   font-weight: 800;
   font-display: swap;
   src: local('Inter'), local('Inter ExtraBold'),
@@ -82,7 +82,7 @@
 }
 
 @font-face {
-  font-family: 'Inter';
+  font-family: Inter;
   font-weight: 900;
   font-display: swap;
   src: local('Inter'), local('Inter Black'),
