css var sizes for root

--- a/src/sass/base/_root.scss
+++ b/src/sass/base/_root.scss
@@ -2,6 +2,7 @@
   --clr-hsl: hsl(259, 79%, 45%);
   --clr-rgb: #47ff63;
 
+  // 16px = 1rem | --size-16: 1rem;
   --size-1: 0.0625rem;
   --size-2: 0.125rem;
   --size-3: 0.1875rem;
